--- a/index.html
+++ b/index.html
@@ -1,35 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Landing Page</title>
-	<style>
-		.body {
-			background: radial-gradient(circle, #ff6b6b, #ffeb3b);
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			height: 100vh;
-			margin: 0;
-		}
-
-		.button {
-			background-color: #fff;
-			color: #000;
-			padding: 10px 20px;
-			border: none;
-			border-radius: 5px;
-			font-size: 20px;
-			margin: 10px;
-			cursor: pointer;
-		}
-	</style>
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Landing Page</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-  <h1>Michael Que</h1>
-  <h2>San Francisco</h2>
-  <h3>Project and Program Management</h3></br>
-	<button>My Profile</button>
-	<button>My Projects</button>
+ 
 </body>
 </html>
