--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
- 
+ <div class="navbar">
+        <div class="container flex">
+          <h1 class="logo">Skilllz</h1>
+            <nav>
+              <ul>
+                <li class="nav"><a class="outline" href="">Log in</a></li>
+                <li class="nav"><a href="" class="outline">Check courses</a 				</li>
+              </ul>
+            </nav>
+        </div>
+      </div>
 </body>
 </html>
