--- a/index.html
+++ b/index.html
@@ -54,3 +54,14 @@ header, footer, article, nav, aside {
   display: flex;
   flex: 1;
 }
+#main > article {
+  flex: 1;
+}
+#main > nav, 
+#main > aside {
+  flex: 0 0 20vw;
+  background: beige;
+}
+.main > nav {
+  order: -1;
+}
