--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     body {
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
+      min-height: 1;
       margin: 0;
       font-family: Arial, sans-serif;
     }
@@ -31,7 +31,7 @@
     header,
     footer {
       background: yellowgreen;
-      height: 20vh;
+      height: 100px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -143,9 +143,11 @@ li {
 .button {
   background-color: #fff;
   color: #000;
-  padding: 10px 20px;
+  padding: 8px 16px;
+  height: 40px;
+  width: 150px;
   border: none;
-  border-radius: 5px;
+  border-radius: 50px;
   font-size: 20px;
   margin: 10px;
   cursor: pointer;
