--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <style>
     * {
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+      margin: 8;
+      padding: 8;
     }
 
     body {
       display: flex;
       flex-direction: column;
-      min-height: 1;
-      margin: 0;
+      min-height: 100px;
+      margin: 8;
       font-family: Arial, sans-serif;
     }
 
@@ -31,7 +31,7 @@
     header,
     footer {
       background: yellowgreen;
-      height: 100px;
+      min-height: 100px;
       display: flex;
       align-items: center;
       justify-content: center;
