--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Example Landing Page</title>
+  <title><H1>THE WORK WITHIN QUEUE</H1></title>
   <style>
     * {
       box-sizing: border-box;
@@ -206,9 +206,16 @@ li {
 <body>
   <header>Header</header>
   <div id="main">
-    <article>Article</article>
+    <article>
+      <h3>A Webfolio of Projects and Programs</h3>
+      <H2>By Michael Que</H2>
+      <H4>San Francisco, California</H4>
+    </article>
     <nav>Nav</nav>
-    <aside>Aside</aside>
+    <aside>
+      <div id="button group">
+        <button names="Profile, Projects, Store, Services">
+    </aside>
   </div>
   <footer>Footer</footer>
 </body>
