--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><H1>THE WORK WITHIN QUEUE</H1></title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+8
+ 
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>THE WORK WITHIN QUEUE</title>
   <style>
     * {
       box-sizing: border-box;
@@ -207,14 +211,19 @@ li {
   <header>Header</header>
   <div id="main">
     <article>
+      H1>THE WORK WITHIN QUEUE</H1>
       <h3>A Webfolio of Projects and Programs</h3>
       <H2>By Michael Que</H2>
       <H4>San Francisco, California</H4>
     </article>
     <nav>Nav</nav>
     <aside>
-      <div id="button group">
-        <button names="Profile, Projects, Store, Services">
+      <Container>
+        <button>Profile</button>
+        <button>Projects</button>
+        <button>Online Store</button>
+        <button>Consulting</button>
+        </Container>
     </aside>
   </div>
   <footer>Footer</footer>
