--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@ li {
       <h3>A Webfolio of Projects and Programs</h3>
       <H2>By Michael Que</H2>
       <H4>San Francisco, California</H4>
+      <button>Profile</button>
     </article>
     <nav>Nav list
       <li>Projects</li>
@@ -223,7 +224,7 @@ li {
     </nav>
     <aside>
       <Container>
-        <button>Profile</button>
+        <img src href="wwww.google.com" alt="logo.svg">
         </Container>
     </aside>
   </div>
