--- a/index.html
+++ b/index.html
@@ -208,10 +208,15 @@ li {
 </head>
 
 <body>
-  <header>Header</header>
+  <header>
+    <div class="container">
+      <Menu-icon image src href="" alt="Menu Icon">
+        <H1>THE WORK WITHIN QUEUE</H1>
+      </Menu-icon>
+    </div>
+      </header>
   <div id="main">
     <article>
-      H1>THE WORK WITHIN QUEUE</H1>
       <h3>A Webfolio of Projects and Programs</h3>
       <H2>By Michael Que</H2>
       <H4>San Francisco, California</H4>
