--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       padding: 8;
     }
 
-    body {
+    article {
       display: flex;
       flex-direction: column;
       min-height: 100px;
@@ -51,6 +51,7 @@
     aside {
       width: 100%;
       margin-bottom: 1em;
+      text-alignment: center
     }
 
     article {
