--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       padding: 0;
     }
 
-    body {
+    article {
       display: flex;
       flex-direction: column;
       min-height: 100vh; /* Corrected: min-height should be 100vh for full viewport height */
@@ -48,6 +48,7 @@
     aside {
       width: 100%;
       margin-bottom: 1em;
+      text-alignment: center
     }
 
     article {
