--- a/index.html
+++ b/index.html
@@ -168,9 +168,10 @@
 </head>
 
 <body>
+<body>
   <header>
     <div class="container">
-      <img src="menu-icon.png" alt="Menu Icon"> <!-- Corrected: Added correct image source -->
+      <img src="menu-icon.png" alt="Menu Icon">
       <h1>THE WORK WITHIN QUEUE</h1>
     </div>
   </header>
