--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
   <style>
     * {
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+      margin: 4;
+      padding: 4;
+      background: radial-gradient(circle, #ff6b6b, #ffeb3b);
     }
 
     article {
       display: flex;
       flex-direction: column;
       min-height: 100vh; /* Corrected: min-height should be 100vh for full viewport height */
-      margin: 0;
+      margin: 4;
       font-family: "lato", sans-serif; /* Corrected: Changed to "lato" font */
       color: white;
       background: radial-gradient(circle, #ff6b6b, #ffeb3b);
@@ -47,20 +48,20 @@
     nav,
     aside {
       width: 100%;
-      margin-bottom: 1em;
+      margin-bottom: 4em;
       text-alignment: center
     }
 
     article {
       background: #f0f0f0;
       text-align: center; /* Corrected: Changed to text-align */
-      padding: 1em; /* Added: Some padding for better readability */
+      padding: 4em; /* Added: Some padding for better readability */
     }
 
     nav,
     aside {
       background: blue;
-      padding: 1em; /* Added: Some padding for better readability */
+      padding: 4em; /* Added: Some padding for better readability */
     }
 
     @media screen and (min-width: 768px) {
@@ -70,8 +71,8 @@
 
       article {
         flex: 2;
-        margin-right: 1em;
-        margin-bottom: 0;
+        margin-right: 4em;
+        margin-bottom: 4;
       }
 
       nav,
@@ -95,23 +96,23 @@
     h2 {
       font-size: 36px;
       font-weight: 300;
-      margin: 10px 0;
+      margin: 16px 0;
       line-height: 1.2;
     }
 
     h3 {
       font-size: 24px; /* Added: Heading style for article */
-      margin: 10px 0;
+      margin: 8px 0;
     }
 
     h4 {
       font-size: 18px; /* Added: Heading style for article */
-      margin: 10px 0;
+      margin: 8px 0;
     }
 
     /* Button Styles */
     button {
-      background-color: #fff;
+      background-color: #purple;
       color: #000;
       padding: 8px 16px;
       height: 40px;
@@ -169,17 +170,19 @@
 
 <body>
   <header>
-    <div class="container">
+    <header class="container">
       <img src="menu-icon.png" alt="Menu Icon"> <!-- Corrected: Added correct image source -->
-      <h1>THE WORK WITHIN QUEUE</h1>
-    </div>
+      <header text="THE WORK WITHIN QUEUE" style="h1.stylee.css"></headertext>
+      </container>
   </header>
   <div id="main">
     <article>
+      <center>
       <h3>A Webfolio of Projects and Programs</h3>
       <h2>By Michael Que</h2>
       <h4>San Francisco, California</h4>
       <button>Profile</button>
+    </center>
     </article>
     <nav>
       <ul>
@@ -192,6 +195,6 @@
       <img src="wwww.google.com" alt="logo.svg">
     </aside>
   </div>
-  <footer>Footer</footer>
+  <footer>Miguelano Designs</footer>
 </body>
 </html>
