--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       article {
         flex: 2;
         margin-right: 1em;
-        margin-bottom: 1;
+        margin-bottom: 0;
       }
 
       nav,
@@ -144,7 +144,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      height: 100%;
+      min-height: 100px;
     }
 
     /* Navbar List Styles */
