--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Example Landing Page</title>
+  <title><h1>THE WORK WITHIN QUEUE</h1></title>
   <style>
     * {
       box-sizing: border-box;
@@ -158,15 +158,20 @@
     </ul>
     </ul>
   </div>
-  <header>Header</header>
+  <header><h1>THE WORK WITHIN QUEUE</h1></header>
   <div id="main">
-    <article>Article</article>
+    <article>
+      <h3>A Webfolio of Projects and Programs</h3>
+      <h2>By Michael Que</h2>
+      <h4>San Francisco, California</h4>
+      <button>Profile</button>
+    </article>
     <nav>Nav</nav>
     <aside>Aside</aside>
   </div>
   <footer>
     <div class="copyright">
-      &copy; 2024 Your Company | <a href="#">Homepage</a>
+      &copy; 2023 Miguelano Designs | <icon href="#", alt="home">Home</icon>
     </div>
     <div class="contact-info">
       <a href="#">About</a> | <a href="#">Contact</a>
