--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     header,
     footer {
-      background: yellowgreen;
+      background: green;
       height: 20vh;
       display: flex;
       align-items: center;
@@ -51,11 +51,12 @@
 
     article {
       background: #f0f0f0;
+      alignment: center;
     }
 
     nav,
     aside {
-      background: beige;
+      background: purple;
     }
 
     @media screen and (min-width: 768px) {
@@ -164,7 +165,17 @@
       <h3>A Webfolio of Projects and Programs</h3>
       <h2>By Michael Que</h2>
       <h4>San Francisco, California</h4>
-      <button>Profile</button>
+      <button style="
+              background-color: #fff;
+              color: #000;
+              padding: 8px 16px;
+              height: 40px;
+              width: 150px;
+              border: none;
+              border-radius: 50px;
+              font-size: 20px;
+              margin: 10px;
+              cursor: pointer">Profile</button>
     </article>
     <nav>Nav</nav>
     <aside>Aside</aside>
