--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
   <header><h1>THE WORK WITHIN QUEUE</h1></header>
   <div id="main">
     <article>
+      <center>
       <h3>A Webfolio of Projects and Programs</h3>
       <h2>By Michael Que</h2>
       <h4>San Francisco, California</h4>
@@ -176,6 +177,7 @@
               font-size: 20px;
               margin: 10px;
               cursor: pointer">Profile</button>
+      </center>
     </article>
     <nav>Nav</nav>
     <aside>Aside</aside>
