--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       flex-direction: column;
       min-height: 100vh;
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-Lato: Arial, sans-serif;
     }
 
     header,
@@ -30,6 +30,7 @@
 
     header,
     footer {
+      font: white;
       background: green;
       height: 10vh;
       display: flex;
@@ -176,7 +177,9 @@
               border-radius: 50px;
               font-size: 20px;
               margin: 10px;
-              cursor: pointer">Profile</button>
+              cursor: pointer;
+              transition: background-color 0.3s, color 0.3s
+        ">Profile</button>
       </center>
     </article>
     <nav>Nav</nav>
