--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <h2>By Michael Que</h2>
       <h4>San Francisco, California</h4>
       <button style="
-              background-color: #fff;
+              background-color: purple;
               color: #000;
               padding: 8px 16px;
               height: 40px;
