--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
       <h4>San Francisco, California</h4>
       <button style="
               background-color: purple;
-              color: #000;
+              color: #fff;
               padding: 8px 16px;
               height: 40px;
-              width: 150px;
+              width: 100px;
               border: none;
               border-radius: 50px;
-              font-size: 20px;
+              font-size: 16px;
               margin: 10px;
               cursor: pointer;
-              transition: background-color 0.3s, color 0.3s
+              transition: background-color 0.10s, color 0.30s
         ">Profile</button>
       </center>
     </article>
