--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><h1>THE WORK WITHIN QUEUE</h1></title>
   <style>
+    div {
+    background: linear-gradient(to right, #6600cc 0%, #3366cc 100%);
+}
     * {
       box-sizing: border-box;
       margin: 0;
@@ -17,7 +20,7 @@
       flex-direction: column;
       min-height: 100vh;
       margin: 0;
-      font-Lato: Arial, sans-serif;
+      font-Trebuchet MS: Arial, sans-serif;
     }
 
     header,
@@ -51,13 +54,13 @@
     }
 
     article {
-      background: #f0f0f0;
+      background: black, 50%;
       height: 100%;
     }
 
     nav,
     aside {
-      background: purple;
+      background: purple, 50%;
     }
 
     @media screen and (min-width: 768px) {
