--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><h1>THE WORK WITHIN QUEUE</h1></title>
   <style>
-    * {
+    {
+      background: 
+    background: linear-gradient(to left, #6600cc 0%, #0099cc 100%);
       box-sizing: border-box;
       margin: 0;
       padding: 0;
@@ -18,7 +20,9 @@
       min-height: 100vh;
       margin: 0;
       font-Lato: Arial, sans-serif;
+      justify-content: center;
     }
+    
 
     header,
     footer,
@@ -31,7 +35,8 @@
     header,
     footer {
       font: white;
-      background: green;
+      background: #ffF
+      opacity .5;
       height: 10vh;
       display: flex;
       align-items: center;
@@ -53,6 +58,9 @@
     article {
       background: #f0f0f0;
       height: 100%;
+        display: flex;
+      justify-content: center;
+      }
     }
 
     nav,
