--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><h1>THE WORK WITHIN QUEUE</h1></title>
-  <style>
+  <div> 
+      background: linear-gradient (to left, #6600cc 0%, #0099cc 100%);
+<style>
     {
-    background: linear-gradient (to left, #6600cc 0%, #0099cc 100%);
       box-sizing: border-box;
       margin: 0;
       padding: 0;
@@ -201,5 +202,5 @@
     </div>
   </footer>
 </body>
-
+</div>
 </html>
