--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title><h1>THE WORK WITHIN QUEUE</h1></title>
   <div> 
       background: linear-gradient (to left, #6600cc 0%, #0099cc 100%);
-<style>
+    <style>
     {
       box-sizing: border-box;
       margin: 0;
@@ -66,6 +66,7 @@
     nav,
     aside {
       background: purple;
+      opacity: .5;
     }
 
     @media screen and (min-width: 768px) {
@@ -88,63 +89,15 @@
         order: -1;
       }
     }
-
-    /* Navigation Icon and Overlay Styles */
-    .nav-icon {
-      display: block;
-      cursor: pointer;
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      z-index: 2;
-    }
-
-    .nav-overlay {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      z-index: 1;
-    }
-
-    .nav-list {
-      list-style-type: none;
-      padding: 10px;
-      background: white;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 70%;
-      height: 100%;
-      z-index: 3;
-      transform: translateX(-100%);
-      transition: transform 0.3s ease-in-out;
-    }
-
-    .nav-list li {
-      margin-bottom: 10px;
-    }
-
-    .nav-icon:checked+.nav-overlay {
-      display: block;
-    }
-
-    .nav-icon:checked+.nav-overlay .nav-list {
-      transform: translateX(0);
-    }
-
     /* Footer Styles */
     footer {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: yellowgreen;
+      background: yellowgreen
+      opacity: .5;
       height: 10vh;
     }
-
     .copyright {
       color: white;
       margin-left: 20px;
