--- a/index.html
+++ b/index.html
@@ -6,108 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><h1>THE WORK WITHIN QUEUE</h1></title>
   <div> 
-      background: linear-gradient (to left, #6600cc 0%, #0099cc 100%);
-    <style>
-    {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
 
-    body {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      margin: 0;
-      font-Lato: Arial, sans-serif;
-      justify-content: center;
-    }
-    
-
-    header,
-    footer,
-    article,
-    nav,
-    aside {
-      padding: 1em;
-    }
-
-    header,
-    footer {
-      font: white;
-      background: #ffF
-      opacity .5;
-      height: 10vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    #main {
-      display: flex;
-      flex-direction: column;
-    }
-
-    article,
-    nav,
-    aside {
-      width: 100%;
-      margin-bottom: 1em;
-    }
-
-    article {
-      background: #f0f0f0;
-      height: 100%;
-        display: flex;
-      justify-content: center;
-      }
-    }
-
-    nav,
-    aside {
-      background: purple;
-      opacity: .5;
-    }
-
-    @media screen and (min-width: 768px) {
-      #main {
-        flex-direction: row;
-      }
-
-      article {
-        flex: 2;
-        margin-right: 1em;
-        margin-bottom: 0;
-      }
-
-      nav,
-      aside {
-        flex: 1;
-      }
-
-      nav {
-        order: -1;
-      }
-    }
-    /* Footer Styles */
-    footer {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: yellowgreen
-      opacity: .5;
-      height: 10vh;
-    }
-    .copyright {
-      color: white;
-      margin-left: 20px;
-    }
-
-    .contact-info {
-      color: white;
-      margin-right: 20px;
-    }
-  </style>
 </head>
 
 <body>
@@ -144,6 +43,26 @@
       </center>
     </article>
     <nav>Nav</nav>
+         <div class="project-section">
+    <div class="project-box">
+      <h3>Projects</h3>
+      <p>Description of Projects</p>
+      <img src="project-image.jpg" alt="Projects Image">
+    </div>
+
+    <div class="project-box">
+      <h3>The Online Book Store</h3>
+      <p>Description of The Online Book Store</p>
+      <img src="bookstore-image.jpg" alt="Book Store Image">
+    </div>
+
+    <div class="project-box">
+      <h3>Consulting</h3>
+      <p>Description of Consulting</p>
+      <img src="consulting-image.jpg" alt="Consulting Image">
+    </div>
+  </div>
+    
     <aside>Aside</aside>
   </div>
   <footer>
