--- a/index.html
+++ b/index.html
@@ -4,75 +4,186 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><h1>THE WORK WITHIN QUEUE</h1></title>
-  <div> 
+  <title>The Work Within Queue</title>
+  <style>
+    .body {
+    height: auto;
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+    }
 
+    header {
+      background-color: #878f99;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0;
+    }
+
+    #main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 20px;
+    }
+
+    h3,
+    h2,
+    h4 {
+      margin: 5px 0;
+    }
+
+    button {
+      background-color: purple;
+      color: #fff;
+      padding: 8px 16px;
+      height: 40px;
+      width: 100px;
+      border: none;
+      border-radius: 50px;
+      font-size: 16px;
+      margin: 10px;
+      cursor: pointer;
+      transition: background-color 0.10s, color 0.30s;
+    }
+
+    .nav-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      text-align: center;
+    }
+
+    .nav-list li {
+      margin-bottom: 10px;
+    }
+
+    .project-section {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+
+    .project-box {
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+      height: auto; /* Autofit the container */
+      padding-top: 16px;
+      margin-bottom: 20px;
+      margin-top: 20px;
+      border-radius: 16px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease-in-out;
+      background: linear-gradient(45deg, #8e44ad, #9b59b6, #a349a4, #943bea);
+    }
+
+    .project-box:hover {
+      transform: scale(1.1);
+    }
+
+    .project-box img {
+      position: center;
+      margin: 8px
+      padding: 8px;
+      width: 250px;
+      height: 250px;
+      object-fit: cover;
+      border-radius: 16px;
+    }
+
+    footer {
+      background-color: #878f99;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+
+    .copyright,
+    .contact-info {
+      margin-top: 10px;
+    }
+
+    @media only screen and (min-width: 600px) {
+      #main {
+        flex-direction: row;
+      }
+
+      article {
+        margin-right: 20px;
+       justify-content: center;
+
+      }
+
+      .nav-list {
+        text-align: left;
+      }
+
+      footer {
+      position: relative;
+      max-height: 100px;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .project-box {
+        width: calc(33.33% - 20px);
+      }
+    }
+  </style>
 </head>
 
 <body>
-  <input type="checkbox" id="nav-toggle" class="nav-icon">
-  <label for="nav-toggle" class="nav-icon">&#9776;</label>
-  <div class="nav-overlay">
-    <ul class="nav-list">
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">The Online Book Store</a></li>
-      <li><a href="#">Consulting</a></li>
-    </ul>
-    </ul>
-  </div>
-  <header><h1>THE WORK WITHIN QUEUE</h1></header>
+
+  <header>
+    <h1>The Work Within Queue</h1>
+  </header>
+
   <div id="main">
     <article>
-      <center>
       <h3>A Webfolio of Projects and Programs</h3>
       <h2>By Michael Que</h2>
       <h4>San Francisco, California</h4>
-      <button style="
-              background-color: purple;
-              color: #fff;
-              padding: 8px 16px;
-              height: 40px;
-              width: 100px;
-              border: none;
-              border-radius: 50px;
-              font-size: 16px;
-              margin: 10px;
-              cursor: pointer;
-              transition: background-color 0.10s, color 0.30s
-        ">Profile</button>
-      </center>
+      <button>Profile</button>
     </article>
-    <nav>Nav</nav>
-         <div class="project-section">
-    <div class="project-box">
-      <h3>Projects</h3>
-      <p>Description of Projects</p>
-      <img src="project-image.jpg" alt="Projects Image">
+    <nav></nav>
+	<aside>
+    <div class="project-section">
+      <div class="project-box">
+        <h3>Projects</h3>
+        <p>Description of Projects</p>
+        <img src="project-image.jpg" alt="Projects Image">
+      </div>
+
+      <div class="project-box">
+        <h3>The Online Book Store</h3>
+        <p>Description of The Online Book Store</p>
+        <img src="bookstore-image.jpg" alt="Book Store Image">
+      </div>
+
+      <div class="project-box">
+        <h3>Consulting</h3>
+        <p>Description of Consulting</p>
+        <img src="consulting-image.jpg" alt="Consulting Image">
+      </div>
     </div>
 
-    <div class="project-box">
-      <h3>The Online Book Store</h3>
-      <p>Description of The Online Book Store</p>
-      <img src="bookstore-image.jpg" alt="Book Store Image">
-    </div>
+    </aside>
+  </div>
 
-    <div class="project-box">
-      <h3>Consulting</h3>
-      <p>Description of Consulting</p>
-      <img src="consulting-image.jpg" alt="Consulting Image">
-    </div>
-  </div>
-    
-    <aside>Aside</aside>
-  </div>
   <footer>
     <div class="copyright">
-      &copy; 2023 Miguelano Designs | <icon href="#", alt="home">Home</icon>
+      &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
     </div>
     <div class="contact-info">
       <a href="#">About</a> | <a href="#">Contact</a>
     </div>
   </footer>
 </body>
-</div>
+
 </html>
+
