--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
     </article>
     <nav></nav>
 	<aside>
-    <div class="project-section">
-      <div class="project-box">
-        <h3>Projects</h3>
-        <p>Description of Projects</p>
+    <div container="project-section">
+      <container class="project-box">
+        <button>Projects<button>
+        <p>Descriptione</p>
         <img src="project-image.jpg" alt="Projects Image">
-      </div>
+      </container>
 
       <div class="project-box">
         <h3>The Online Book Store</h3>
