--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>The Work Within Queue</title>
   <style>
     .body {
-    height: auto;
+    height: fillscreen;
       margin: 0;
       font-family: 'Arial', sans-serif;
     }
