--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Work Within Queue</title>
+  <Logo href="./QueueLogo.png", name="The Work Within Queue", alt=Businesst</title>
   <style>
     .body {
     height: auto;
@@ -62,13 +62,13 @@
       margin-bottom: 10px;
     }
 
-    .project-section {
+    .container-section {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
     }
 
-    .project-box {
+    .container-box {
       position: relative;
       overflow: hidden;
       width: 100%;
@@ -82,11 +82,11 @@
       background: linear-gradient(45deg, #8e44ad, #9b59b6, #a349a4, #943bea);
     }
 
-    .project-box:hover {
+    .container-box:hover {
       transform: scale(1.1);
     }
 
-    .project-box img {
+	.container-box img {
       position: center;
       margin: 8px
       padding: 8px;
@@ -130,7 +130,7 @@
         justify-content: space-between;
       }
 
-      .project-box {
+      .container-box {
         width: calc(33.33% - 20px);
       }
     }
