--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <Logo href="./QueueLogo.png", name="The Work Within Queue", alt=Businesst</title>
-de>
-  <div class="project-section">
+  <Logo href="./QueueLogo.png", name="The Work Within Queue", alt=BusinessRqmt>QueueLogo</Logo>
+  <container class="project-section">
     <div class="project-box">
       <h3>Projects</h3>
       <p>Description of Projects</p>
@@ -26,9 +25,7 @@ de>
     </div>
   </div>
 </aside>
-e>
-  </div>
-
+  </container>
   <footer>
     <div class="copyright">
       &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
