--- a/index.html
+++ b/index.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<style ref="stylesheet.css">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <Logo href="./QueueLogo.png", name="The Work Within Queue", alt=BusinessRqmt>QueueLogo</Logo>
-  <container class="project-section">
-    <div class="project-box">
-      <h3>Projects</h3>
-      <p>Description of Projects</p>
-      <img src="project-image.jpg" alt="Projects Image">
+  <title>The Work Within Queue</title>
+
+
+  <header>
+    <img src="QueueLogo.png" class="w3-circle" alt="Weblogo">
+    <div class="w3-top">
+      <div class="w3-bar w3-black">
+        <a href="#home" class="w3-bar-item w3-button">Home</a>
+        <a href="#about" class="w3-bar-item w3-button">About</a>
+        <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      </div>
+    </div>
+    <a href="#login" class="login-link">Login</a>
+  </header>
+</head>
+
+<body>
+
+  <div class="main-container">
+    <article>
+      <div class="article-content">
+        <h2>Article</h2>
+        <div>
+          <h3>Article Title</h3>
+          <p>Article content goes here.</p>
+        </div>
+      </div>
+    </article>
+
+    <div class="project-section">
+      <h2>Projects Section</h2>
+      <div class="project-box">
+        <h3>Projects</h3>
+        <p>Description of Projects</p>
+        <img src="project-image.jpg" alt="Projects Image">
+      </div>
+
+      <div class="project-box">
+        <h3>The Online Book Store</h3>
+        <p>Description of The Online Book Store</p>
+        <img src="bookstore-image.jpg" alt="Book Store Image">
+      </div>
+
+      <div class="project-box">
+        <h3>Consulting</h3>
+        <p>Description of Consulting</p>
+        <img src="consulting-image.jpg" alt="Consulting Image">
+      </div>
     </div>
 
-    <div class="project-box">
-      <h3>The Online Book Store</h3>
-      <p>Description of The Online Book Store</p>
-      <img src="bookstore-image.jpg" alt="Book Store Image">
-    </div>
-
-    <div class="project-box">
-      <h3>Consulting</h3>
-      <p>Description of Consulting</p>
-      <img src="consulting-image.jpg" alt="Consulting Image">
-    </div>
+    <section>
+      <h2>Section</h2>
+      <div>
+        <h3>Section Title</h3>
+        <p>Section content goes here.</p>
+      </div>
+    </section>
   </div>
-</aside>
-  </container>
+
   <footer>
     <div class="copyright">
       &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
@@ -35,7 +72,5 @@
     </div>
   </footer>
 </body>
-  </style>
 
 </html>
-
