--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Work Within Queue</title>
-
-
   <header>
     <img src="QueueLogo.png" class="w3-circle" alt="Weblogo">
     <div class="w3-top">
@@ -25,12 +23,13 @@
   <div class="main-container">
     <article>
       <div class="article-content">
-        <h2>Article</h2>
-        <div>
-          <h3>Article Title</h3>
-          <p>Article content goes here.</p>
-        </div>
-      </div>
+    <article>
+      <style>
+      <h3>A Webfolio of Projects and Programs</br>
+      <p></p>By Michael Que</br>
+      <p></p>San Francisco, California</h3>
+      <button>Profile</button>
+        </style>
     </article>
 
     <div class="project-section">
