--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Work Within Queue</title>
+  <style>
+    /* Your CSS styles go here */
+  </style>
+</head>
+
+<body>
   <header>
     <img src="QueueLogo.png" class="w3-circle" alt="Weblogo">
     <div class="w3-top">
@@ -16,19 +22,16 @@
     </div>
     <a href="#login" class="login-link">Login</a>
   </header>
-</head>
-
-<body>
-      <style>
 
   <div class="main-container">
     <article>
       <div class="article-content">
-      <h3>A Webfolio of Projects and Programs</br>
-      <p></p>By Michael Que</br>
-      <p></p>San Francisco, California</h3>
-      <button>Profile</button>
-         </article>
+        <h3>A Webfolio of Projects and Programs</h3>
+        <p>By Michael Que</p>
+        <p>San Francisco, California</p>
+        <button>Profile</button>
+      </div>
+    </article>
 
     <div class="project-section">
       <h2>Projects Section</h2>
@@ -38,17 +41,8 @@
         <img src="project-image.jpg" alt="Projects Image">
       </div>
 
-      <div class="project-box">
-        <h3>The Online Book Store</h3>
-        <p>Description of The Online Book Store</p>
-        <img src="bookstore-image.jpg" alt="Book Store Image">
-      </div>
+      <!-- Other project boxes go here -->
 
-      <div class="project-box">
-        <h3>Consulting</h3>
-        <p>Description of Consulting</p>
-        <img src="consulting-image.jpg" alt="Consulting Image">
-      </div>
     </div>
 
     <section>
@@ -59,9 +53,7 @@
       </div>
     </section>
   </div>
-   </style>
-</body>
-  
+
   <footer>
     <div class="copyright">
       &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
@@ -70,5 +62,6 @@
       <a href="#">About</a> | <a href="#">Contact</a>
     </div>
   </footer>
+</body>
 
 </html>
