--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ h4 {
 
 .project-box {
   position: relative;
+  box-sizing: border-box;
   justify-content: center;
   overflow: hidden;
   width: 100%;
