--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ h4 {
 
 /* Project Section Styles */
 .project-section {
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -109,6 +110,7 @@ footer {
   }
 
   article {
+    box-sizing: border-box;
     margin-right: 20px;
   }
 
