--- a/index.html
+++ b/index.html
@@ -186,6 +186,20 @@ button {
         <p>Description of Projects</p>
         <img src="project-image.jpg" alt="Projects Image">
       </div>
+          <div class="project-section">
+      <h2>eBookstore</h2>
+      <div class="project-box">
+        <h3>eBookstore</h3>
+        <p>Description of Projects</p>
+        <img src="project-image.jpg" alt="Projects Image">
+      </div>
+    <div class="project-section">
+      <h2>Consulting</h2>
+      <div class="project-box">
+        <h3>Consulting</h3>
+        <p>Description of Projects</p>
+        <img src="project-image.jpg" alt="Projects Image">
+      </div>
 
       <!-- Other project boxes go here -->
 
