--- a/index.html
+++ b/index.html
@@ -182,28 +182,24 @@ button {
     </article>
 
     <div class="project-section">
-      <h2>Projects Section</h2>
       <div class="project-box">
         <h3>Projects</h3>
         <p>Description of Projects</p>
         <img src="project-image.jpg" alt="Projects Image">
       </div>
-          <div class="project-section">
-      <h2>eBookstore</h2>
+
       <div class="project-box">
-        <h3>eBookstore</h3>
-        <p>Description of Projects</p>
-        <img src="project-image.jpg" alt="Projects Image">
-      </div>
-    <div class="project-section">
-      <h2>Consulting</h2>
-      <div class="project-box">
-        <h3>Consulting</h3>
-        <p>Description of Projects</p>
-        <img src="project-image.jpg" alt="Projects Image">
+        <h3>The Online Book Store</h3>
+        <p>Description of The Online Book Store</p>
+        <img src="bookstore-image.jpg" alt="Book Store Image">
       </div>
 
-      <!-- Other project boxes go here -->
+      <div class="project-box">
+        <h3>Consulting</h3>
+        <p>Description of Consulting</p>
+        <img src="consulting-image.jpg" alt="Consulting Image">
+      </div>
+    </div>roject boxes go here -->
 
     </div>
 
