--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@ h4 {
 
 /* Project Section Styles */
 .project-section {
-  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -112,6 +111,8 @@ footer {
 
   article {
     box-sizing: border-box;
+    display: plex;
+    width: auto;
     margin-right: 20px;
   justify-content: center;
   }
