--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@ button {
     </div>
     <a href="#login" class="login-link">Login</a>
   </header>
+
   <div class="main-container">
-  <article>
   
-    
+    <article>
       <div class="article-content">
         <h3>A Webfolio of Projects and Programs</h3>
         <p>By Michael Que</p>
@@ -183,25 +183,24 @@ button {
       </div>
     </article>
 
-    <div class="project-section">
-      <div class="project-box">
+  <div class="project-box1">
         <h3>Projects</h3>
         <p>Description of Projects</p>
         <img src="project-image.jpg" alt="Projects Image">
       </div>
 
-      <div class="project-box">
+      <div class="project-box2">
         <h3>The Online Book Store</h3>
         <p>Description of The Online Book Store</p>
         <img src="bookstore-image.jpg" alt="Book Store Image">
       </div>
 
-      <div class="project-box">
+      <div class="project-box3">
         <h3>Consulting</h3>
         <p>Description of Consulting</p>
         <img src="consulting-image.jpg" alt="Consulting Image">
       </div>
-    </div>roject boxes go here -->
+      </div>>
 
     </div>
 
