--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ header {
   background-color: #878f99;
   color: #fff;
   padding: 10px;
-  text-align: center;
+  justify-content: space-around;
 }
 
 h1 {
