--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ button {
         <button>Profile</button>
       </div>
     </article>
-
+ <div class="project-section">
   <div class="project-box1">
         <h3>Projects</h3>
         <p>Description of Projects</p>
