--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@ button {
 .login-btn,
 button {
   /* ... other styles ... */
-  border-radius: 5px; /* Keep it consistent */
+  border-radius: 5px;
+  alignment: right/* Keep it consistent */
 }
     /* Your CSS styles go here */
   </style>
