--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ button {
         <p>Description of Consulting</p>
         <img src="consulting-image.jpg" alt="Consulting Image">
       </div>
-      </div>>
+      </div>
 
     </div>
 
