--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ footer {
   flex-direction: column; /* For smaller screens */
   justify-content: space-between;
   align-items: center;
-  background: var(--primary-color);
+  background: black;
   color: white;
   padding: 10px;
   margin-top: 20px;
@@ -213,7 +213,7 @@ button {
       </div>
     </section>
   </div>
-
+</body>
   <footer>
     <div class="copyright">
       &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
@@ -222,6 +222,6 @@ button {
       <a href="#">About</a> | <a href="#">Contact</a>
     </div>
   </footer>
-</body>
+
 
 </html>
