--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
 
 /* Header Styles */
 header {
-  background-color: #878f99;
+  background-color: black;
   color: #fff;
   padding: 10px;
   justify-content: space-around;
