--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   background: black;
-  color: white;
+  color: #fff;
   padding: 10px;
   margin-top: 20px;
   width: Auto;
