--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@ footer {
   align-items: center;
   background: black;
   color: #fff;
-  padding: 10px;
-  margin-top: 20px;
+  padding: 8px, 16px;
+  margin-top: 8px;
   width: Auto;
 }
 
 .copyright,
 .contact-info {
-  margin-top: 10px;
+  margin-top: px;
 }
 
 /* Media Query for larger screens */
@@ -192,14 +192,10 @@ button {
         <h3>Projects</h3>
         <p>Description of Projects</p>
         <img src="project-image.jpg" alt="Projects Image">
-      </div>
-
       <div class="project-box2">
         <h3>The Online Book Store</h3>
         <p>Description of The Online Book Store</p>
         <img src="bookstore-image.jpg" alt="Book Store Image">
-      </div>
-
       <div class="project-box3">
         <h3>Consulting</h3>
         <p>Description of Consulting</p>
@@ -224,7 +220,7 @@ button {
       &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
     </div>
     <div class="contact-info">
-      <a href="#">About</a> | <a href="#">Contact</a>
+      <a href="#">Privacy Notice</a> | <a href="#">Temrs and Condition</a>
     </div>
   </footer>
 
