--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ h4 {
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+ 
 }
 
 .project-box {
@@ -61,10 +61,10 @@ h4 {
   box-sizing: border-box;
   justify-content: center;
   overflow: hidden;
+  height: 400px
   width: 100%;
-  padding-top: 16px;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  padding-top: 36px;
+  margin-top: 36px;
   border-radius: 16px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
