--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Work Within Queue</title>
-  
-  <style>
-    
-    /* Reset default style and set padding and margin to zero */
+/* Reset default style and set padding and margin to zero */
 * {
-
-/* White text throughout */
-body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+/* White text throughout */
+body {
   background: linear-gradient(to left, #6600cc 0%, #0099cc 100%);
   font-family: 'Arial', sans-serif;
   color: white; /* Set text color to white */
@@ -23,10 +14,10 @@ body {
 
 /* Header Styles */
 header {
-  background-color: black;
+  background-color: #878f99;
   color: #fff;
   padding: 10px;
-  justify-content: space-around;
+  text-align: center;
 }
 
 h1 {
@@ -50,21 +41,19 @@ h4 {
 
 /* Project Section Styles */
 .project-section {
-  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
- 
+  justify-content: space-around;
 }
 
 .project-box {
   position: relative;
-  box-sizing: border-box;
   justify-content: center;
   overflow: hidden;
-  height: 400px
   width: 100%;
-  padding-top: 36px;
-  margin-top: 36px;
+  padding-top: 16px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   border-radius: 16px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
@@ -91,16 +80,15 @@ footer {
   flex-direction: column; /* For smaller screens */
   justify-content: space-between;
   align-items: center;
-  background: black;
-  color: #fff;
-  padding: 8px, 16px;
-  margin-top: 8px;
-  width: Auto;
+  background: var(--primary-color);
+  color: white;
+  padding: 10px;
+  margin-top: 20px;
 }
 
 .copyright,
 .contact-info {
-  margin-top: px;
+  margin-top: 10px;
 }
 
 /* Media Query for larger screens */
@@ -110,11 +98,7 @@ footer {
   }
 
   article {
-    box-sizing: border-box;
-    display: plex;
-    width: auto;
     margin-right: 20px;
-  justify-content: center;
   }
 
   .nav-list {
@@ -152,77 +136,5 @@ button {
 .login-btn,
 button {
   /* ... other styles ... */
-  border-radius: 5px;
-  alignment: right/* Keep it consistent */
+  border-radius: 5px; /* Keep it consistent */
 }
-    /* Your CSS styles go here */
-  </style>
-
-
-
-
-  <header>
-    <img src="QueueLogo.png" class="w3-circle" alt="Weblogo">
-    <div class="w3-top">
-      <div class="w3-bar w3-black">
-        <a href="#home" class="w3-bar-item w3-button">Home</a>
-        <a href="#about" class="w3-bar-item w3-button">About</a>
-        <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-      </div>
-    </div>
-    <a href="#login" class="login-link">Login</a>
-  </header>
-</head>
-  
-<body>
- 
-  
-    <article>
-      <div class="article-content">
-        <h3>A Webfolio of Projects and Programs</h3>
-        <p>By Michael Que</p>
-        <p>San Francisco, California</p>
-        <button>Profile</button>
-      </div>
-    </article>
-    
- <div class="main-container">
-   
-  <div class="project-box1">
-        <h3>Projects</h3>
-        <p>Description of Projects</p>
-        <img src="project-image.jpg" alt="Projects Image">
-      <div class="project-box2">
-        <h3>The Online Book Store</h3>
-        <p>Description of The Online Book Store</p>
-        <img src="bookstore-image.jpg" alt="Book Store Image">
-      <div class="project-box3">
-        <h3>Consulting</h3>
-        <p>Description of Consulting</p>
-        <img src="consulting-image.jpg" alt="Consulting Image">
-      </div>
-   
-      </div>
-
-    </div>
-
-    <section>
-      <h2>Section</h2>
-      <div>
-        <h3>Section Title</h3>
-        <p>Section content goes here.</p>
-      </div>
-    </section>
-  </div>
-</body>
-  <footer>
-    <div class="copyright">
-      &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
-    </div>
-    <div class="contact-info">
-      <a href="#">Privacy Notice</a> | <a href="#">Temrs and Condition</a>
-    </div>
-  </footer>
-
-
-</html>
