--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ body {
 header {
   background-color: #878f99;
   color: #fff;
-  padding: 10px;
+  padding: 16px;
+margin-top: 16px;
   text-align: center;
 }
 
@@ -120,7 +121,7 @@ footer {
 }
 
 button {
-  background-color: #ff7b25;
+  background-color: green;
   color: #fff;
   padding: 8px 16px;
   height: 40px;
@@ -128,13 +129,15 @@ button {
   border: none;
   border-radius: 50px;
   font-size: 20px;
-  margin: 10px;
+  margin: 8px;
   cursor: pointer;
   transition: background-color 0.10s, color 0.30s;
 }
 
 .login-btn,
 button {
-  /* ... other styles ... */
-  border-radius: 5px; /* Keep it consistent */
-}
+  /* ... other styles ... *//
+  border-radius: 5px; /* Keep it consistent;
+  background-color: #ff7b25;
+ transition: background-color 0.10s, color 0.30s;
+  
