--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ header {
   color: #fff;
   padding: 10px;
   text-align: center;
+      display: flex;
+      justify-content: space-between;
 }
 
 h1 {
@@ -168,7 +170,7 @@ button {
         <a href="#contact" class="w3-bar-item w3-button">Contact</a>
       </div>
     </div>
-    <a href="#login" class="login-link">Login</a>
+ <button class="login-btn" onclick="redirectToGoogleAuthentication()">Login</button>
   </header>
   <div class="main-container">
     
